<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locationId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/street_view"
        android:name="com.google.android.gms.maps.SupportStreetViewPanoramaFragment"
        android:layout_width="394dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/you_are_here"
        app:layout_constraintVertical_bias="0.971"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/locationMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="394dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/address"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/address"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/you_are_here"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/you_are_here"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nearbyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/latitude"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <Button
        android:id="@+id/nearbyBtn"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:text="@string/nearby_places_btn"
        app:layout_constraintBottom_toBottomOf="@+id/street_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.220"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/street_view_btn"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:text="@string/show_street_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.270"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>